crates/tui/src/ui/reading_lens/snapshots/mxr_tui__ui__reading_lens__tests__reading_lens_edition_120.snap
---
source: crates/tui/src/ui/reading_lens/tests.rs
expression: rendered
---
"╭ Reading ─ Newsletters you chose, as an edition. Read when you like. ──────────────────────────────────────── Later 2 ╮"
"│                                               ╭─────────────────────────────────────────────────────────────────────╮│"
"│  │ Reading is an edition of the newsletters   │   Enter reads the item under the cursor.                            ││"
"│  │ you chose, with the sources you read most  │                                                                     ││"
"│  │ first. Nothing here is owed: items fade    │                                                                     ││"
"│  │ after a while unless you press b to keep   │                                                                     ││"
"│  │ them for later.                            │                                                                     ││"
"│  │ Enter read · b later · e let go · D        │                                                                     ││"
"│  │ unsubscribe · Esc close                    │                                                                     ││"
"│                                               │                                                                     ││"
"│  SINCE YOU WERE LAST HERE                     │                                                                     ││"
"│▌ The quiet death of the three-pane layout     │                                                                     ││"
"│  Long Reads Weekly · 3 min · you read 8 of …  │                                                                     ││"
"│  Six things worth your time                   │                                                                     ││"
"│  Local-first Links · 1 min · 5 links          │                                                                     ││"
"│    › Local-first mail…  links.demo.mxr.local  │                                                                     ││"
"│    › WAL checkpoints,…  links.demo.mxr.local  │                                                                     ││"
"│    › Terminal workflows t…  via substack.com  │                                                                     ││"
"│    › Why sync engines need tom…  example.org  │                                                                     ││"
"│    + 1 more                                   │                                                                     ││"
"│                                               │                                                                     ││"
"│  ──────────── You left off here ────────────  │                                                                     ││"
"│                                               │                                                                     ││"
"│  EARLIER THIS WEEK                            │                                                                     ││"
"│  Shipping a sync engine in 2026               │                                                                     ││"
"│  Platform Weekly · 3 min                      │                                                                     ││"
"│                                               │                                                                     ││"
"│  FADING  Goes within a day, unless you keep…  │                                                                     ││"
"│  5 ways to double your open rate              │                                                                     ││"
"│  Growth Digest · 3 min                        │                                                                     ││"
"│  You opened 0 of the last 11 issues · D uns…  │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               ╰─────────────────────────────────────────────────────────────────────╯│"
"│ Here because: you subscribed, and it has an unsubscribe link (rule). Fades Monday unless you keep it.                │"
"│ Enter read · L article · b later · e let go · D unsubscribe · A let go all · B Later shelf · ? help                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
