crates/tui/src/ui/reading_lens/snapshots/mxr_tui__ui__reading_lens__tests__reading_lens_edition_80.snap
---
source: crates/tui/src/ui/reading_lens/tests.rs
expression: rendered
---
"╭ Reading ─ Newsletters you chose, as an edition. Read when you like.  Later 2 ╮"
"│                                                                              │"
"│  │ Reading is an edition of the newsletters you chose, with the sources you  │"
"│  │ read most first. Nothing here is owed: items fade after a while unless    │"
"│  │ you press b to keep them for later.                                       │"
"│  │ Enter read · b later · e let go · D unsubscribe · Esc close               │"
"│                                                                              │"
"│  SINCE YOU WERE LAST HERE                                                    │"
"│▌ The quiet death of the three-pane layout                                    │"
"│  Long Reads Weekly · 3 min · you read 8 of 10                                │"
"│  Six things worth your time                                                  │"
"│  Local-first Links · 1 min · 5 links                                         │"
"│    › Local-first mail is having a moment  links.demo.mxr.local               │"
"│    › WAL checkpoints, explained with pictures  links.demo.mxr.local          │"
"│    › Terminal workflows that stuck  via substack.com                         │"
"│    › Why sync engines need tombstones  example.org                           │"
"│    + 1 more                                                                  │"
"│                                                                              │"
"│  ─────────────────────────── You left off here ───────────────────────────   │"
"│                                                                              │"
"│  EARLIER THIS WEEK                                                           │"
"│  Shipping a sync engine in 2026                                              │"
"│  Platform Weekly · 3 min                                                     │"
"│                                                                              │"
"│  FADING  Goes within a day, unless you keep it with b.                       │"
"│  5 ways to double your open rate                                             │"
"│  Growth Digest · 3 min                                                       │"
"│  You opened 0 of the last 11 issues · D unsubscribe                          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ Here because: you subscribed, and it has an unsubscribe link (rule). Fades … │"
"│ Enter read · L article · b later · e let go · D unsubscribe · A let go all   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
