crates/tui/src/ui/reading_lens/snapshots/mxr_tui__ui__reading_lens__tests__reading_lens_empty_120.snap
---
source: crates/tui/src/ui/reading_lens/tests.rs
expression: rendered
---
"╭ Reading ─ Newsletters you chose, as an edition. Read when you like. ──────────────────────────────────────── Later 2 ╮"
"│                                               ╭─────────────────────────────────────────────────────────────────────╮│"
"│  Nothing new since Tuesday. Later has 2       │   Enter reads the item under the cursor.                            ││"
"│  things saved.                                │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               ╰─────────────────────────────────────────────────────────────────────╯│"
"│                                                                                                                      │"
"│ Enter read · L article · b later · e let go · D unsubscribe · A let go all · B Later shelf · ? help                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
