crates/tui/src/ui/reading_lens/snapshots/mxr_tui__ui__reading_lens__tests__reading_lens_empty_60.snap
---
source: crates/tui/src/ui/reading_lens/tests.rs
expression: rendered
---
"╭ Reading ─ Newsletters you chose, as an edition.  Later 2 ╮"
"│                                                          │"
"│  Nothing new since Tuesday. Later has 2 things saved.    │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│ Enter read · L article · b later · e let go              │"
"╰──────────────────────────────────────────────────────────╯"
