crates/tui/src/ui/reading_lens/snapshots/mxr_tui__ui__reading_lens__tests__reading_lens_later_60.snap
---
source: crates/tui/src/ui/reading_lens/tests.rs
expression: rendered
---
"╭ Reading ─ Newsletters you chose, as an edition.  Later 2 ╮"
"│                                                          │"
"│  LATER  Later never fades. Esc back to the edition.      │"
"│▌ WAL checkpoints, explained with pictures                │"
"│  Local-first Links · 3 min · saved to read offline       │"
"│  On Later since Thu 3 Sep. Later never fades.            │"
"│  Still want it? b lets it go                             │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│ On Later since Thu 3 Sep. Later never fades.             │"
"│ Enter read · L article · b later · e let go              │"
"╰──────────────────────────────────────────────────────────╯"
