crates/tui/src/ui/reading_lens/snapshots/mxr_tui__ui__reading_lens__tests__reading_lens_reader_article_120.snap
---
source: crates/tui/src/ui/reading_lens/tests.rs
expression: rendered
---
"╭ Reading ─ Newsletters you chose, as an edition. Read when you like. ──────────────────────────────────────── Later 2 ╮"
"│                                               ╭─────────────────────────────────────────────────────────────────────╮│"
"│  SINCE YOU WERE LAST HERE                     │ Shipping a sync engine in 2026                                      ││"
"│  The quiet death of the three-pane layout     │ Platform Weekly · Tue 6 Oct · 2 min left                            ││"
"│  Long Reads Weekly · 3 min · you read 8 of …  │ ░░░░░░░░░░░░░░░░░░░░ 0%                                             ││"
"│  Six things worth your time                   │ Issue  [Article] · fetched from platform.demo.mxr.local             ││"
"│  Local-first Links · 1 min · 5 links          │                                                                     ││"
"│    › Local-first mail…  links.demo.mxr.local  │ We rebuilt replication on top of one SQLite file per device and     ││"
"│    › WAL checkpoints,…  links.demo.mxr.local  │ stopped losing writes. Here is what changed, what broke on the way, ││"
"│    › Terminal workflows t…  via substack.com  │ and the one test that caught it.                                    ││"
"│    › Why sync engines need tom…  example.org  │                                                                     ││"
"│    + 1 more                                   │ Deletes                                                             ││"
"│                                               │                                                                     ││"
"│  ──────────── You left off here ────────────  │ A delete is the absence of a row, and an absence does not travel on ││"
"│                                               │ its own. We keep tombstones for three weeks.                        ││"
"│  EARLIER THIS WEEK                            │                                                                     ││"
"│▌ Shipping a sync engine in 2026               │ ── end ──                                                           ││"
"│  Platform Weekly · 3 min                      │ From this source: You read 2 of the last 3 issues.                  ││"
"│                                               │                                                                     ││"
"│  FADING  Goes within a day, unless you keep…  │                                                                     ││"
"│  5 ways to double your open rate              │                                                                     ││"
"│  Growth Digest · 3 min                        │                                                                     ││"
"│  You opened 0 of the last 11 issues · D uns…  │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               │                                                                     ││"
"│                                               ╰─────────────────────────────────────────────────────────────────────╯│"
"│ Here because: you subscribed, and it has an unsubscribe link (rule). Fades Monday unless you keep it.                │"
"│ Esc back · j/k scroll · h highlight · L article · b later · e let go · R original · o email                          │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
