crates/tui/src/ui/reading_lens/snapshots/mxr_tui__ui__reading_lens__tests__reading_lens_reader_article_80.snap
---
source: crates/tui/src/ui/reading_lens/tests.rs
expression: rendered
---
"╭ Reading ─ Newsletters you chose, as an edition. Read when you like.  Later 2 ╮"
"│╭────────────────────────────────────────────────────────────────────────────╮│"
"││  Shipping a sync engine in 2026                                            ││"
"││  Platform Weekly · Tue 6 Oct · 2 min left                                  ││"
"││  ░░░░░░░░░░░░░░░░░░░░ 0%                                                   ││"
"││  Issue  [Article] · fetched from platform.demo.mxr.local                   ││"
"││                                                                            ││"
"││  We rebuilt replication on top of one SQLite file per device and stopped   ││"
"││  losing writes. Here is what changed, what broke on the way, and the one   ││"
"││  test that caught it.                                                      ││"
"││                                                                            ││"
"││  Deletes                                                                   ││"
"││                                                                            ││"
"││  A delete is the absence of a row, and an absence does not travel on its   ││"
"││  own. We keep tombstones for three weeks.                                  ││"
"││                                                                            ││"
"││  ── end ──                                                                 ││"
"││  From this source: You read 2 of the last 3 issues.                        ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"│╰────────────────────────────────────────────────────────────────────────────╯│"
"│ Here because: you subscribed, and it has an unsubscribe link (rule). Fades … │"
"│ Esc back · j/k scroll · h highlight · L article · b later · e let go         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
